--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/sbabybird/snakhtml/issues"
   },
-  "homepage": "https://github.com/sbabybird/snakhtml#readme"
+  "homepage": "https://github.com/sbabybird/snakhtml#readme",
+  "dependencies": {
+    "css-loader": "^0.23.1",
+    "jquery": "^2.2.2",
+    "style-loader": "^0.13.1"
+  }
 }
