--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/sbabybird/snakhtml#readme",
   "dependencies": {
     "css-loader": "^0.23.1",
+    "expose-loader": "^0.7.1",
     "jquery": "^2.2.2",
     "style-loader": "^0.13.1"
   }
