--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "css-loader": "^0.23.1",
     "expose-loader": "^0.7.1",
     "jquery": "^2.2.2",
-    "style-loader": "^0.13.1"
+    "jsx-loader": "^0.13.2",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   }
 }
